fix: height on safari, closes #11188, closes #11152

--- a/public/scss/mixins.scss
+++ b/public/scss/mixins.scss
@@ -80,6 +80,7 @@
 	-webkit-box-orient: vertical;
 	-webkit-line-clamp: $lines;
 	white-space: initial;
+	height: calc(1.5em * $lines);
 }
 
 @for $i from 1 through 6 {
